// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react should add listeners at mount 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krml/LISTENERS>ADDED",
    ],
    Array [
      "@@krml/LISTENERS>REMOVING",
    ],
  ],
}
`;

exports[`react should dispatch events at mount with a given name 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krml/LISTENERS>ADDED>my-name",
    ],
    Array [
      "@@krml/LISTENERS>REMOVING>my-name",
    ],
  ],
}
`;

exports[`react should inject store to a component 1`] = `"<div>a label</div>"`;

exports[`react should not throw an exception if no provider is part of parents 1`] = `
Array [
  Array [
    "[k-ramel/react] Error in %cinject%c for the component %cComponent%c
	> The store needs to be provided by an ancestor of this component.
	> You can use %cprovider%c from %c@k-ramel/react%c or %cProvider%c from %creact-redux%c.

Check the documentation for an example at https://github.com/alakarteio/k-ramel#connect-it-with-reactjs
",
    "font-weight: bolder; font-style: italic;",
    "",
    "font-weight: bolder; font-style: italic;",
    "",
    "font-weight: bolder; font-style: italic;",
    "",
    "font-weight: bolder; font-style: italic;",
    "",
    "font-weight: bolder; font-style: italic;",
    "",
    "font-weight: bolder; font-style: italic;",
    "",
  ],
]
`;

exports[`react should provide store as context and dispatch an INIT event 1`] = `
Object {
  "dispatch": Array [
    Array [
      "@@krml/INIT",
    ],
  ],
  "html": "<div>{\\"this\\":\\"is my store\\"}</div>",
}
`;

exports[`react should refresh when props changes 1`] = `"<div>a label-2</div>"`;

exports[`react should refresh when store changes 1`] = `"<div>an other label</div>"`;
